# konteksto

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  start-qdrant.sh
assets/: demo.cast
builder/: README.md  embed.py  pyproject.toml
db/: embed.py  pyproject.toml  scrape.py
engine/: Cargo.toml
engine/src/: contexto.rs  errors.rs  lib.rs  main.rs  qdrant.rs  solver.rs
konteksto-builder/: README.md  pyproject.toml
konteksto-engine/: Cargo.toml  README.md
konteksto-engine/src/: config.rs  errors.rs  lib.rs  main.rs  solver.rs  title.rs
konteksto-engine/src/clients/: contexto.rs  mod.rs  qdrant.rs
konteksto-web/: Cargo.toml  README.md
konteksto-web/public/css/: app.css
konteksto-web/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  server.rs  state.rs
konteksto-web/src/routes/: back.rs  front.rs  mod.rs
migrations/: 20250509200549_create_guess_table.sql
scripts/: build-db.sh  play.sh  start-qdrant.sh
scripts/deploy/: wait-for-qdrant.sh
