[package]
name = "konteksto-engine"
version = "0.1.0"
edition = "2024"
default-run = "solve"

[lib]
path = "./src/lib.rs"

[[bin]]
path = "./src/main.rs"
name = "solve"

[dependencies]
futures = "0.3.31"
anyhow = "1.0.98"
clap = { version = "4.5.37", features=["derive", "env"] }
qdrant-client = "1.14.0"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
ndarray = "0.16.1"
reqwest = { version = "0.12.15", features = ["json"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
