[package]
name = "konteksto-web"
version = "0.1.0"
edition = "2024"

[lib]
path = "./src/lib.rs"

[[bin]]
name = "web"
path = "./src/main.rs"

[dependencies]
reqwest = "0.12.15"
clap = { version = "4.5.37", features=["derive"] }
anyhow = "1.0.98"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["json", "std", "env-filter"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.4", features = ["macros"] }
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "migrate", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
maud = { version = "0.27.0", features=["axum"] }
konteksto-engine = { path = "../konteksto-engine/" }
